<resources>
    <string name="app_name">Fanatic</string>
    <string name="title_event_detail">Event Detail</string>

    <!--nav drawer-->
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navitagion_drawer">Close Navigation Drawer</string>

    <!--eventful api constants-->
    <string name="api_key" translatable="false">4MJJ8GxZWmjnsMVP</string>
    <string name="response_page_size" translatable="false">100</string>

    <!--activity_settings activity-->
    <string name="title_settings_activity">Settings</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_default_location" translatable="false">44107</string>
    <string name="pref_category_key" translatable="false">category</string>
    <string name="perf_category_title">Category</string>
    <string name="dialog_title_perf_category">Event Category</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="no_events_returned_label">no events returned</string>
    <string name="prompt_search_events">No Results From Search</string>
    <string name="hint_search_by_keyword">Search By Keyword</string>
    <string name="menu_title_search_keywords">Search Keywords</string>
    <string name="pref_keywords_key" translatable="false">keywords</string>
    <string name="label_search_activity">Search Activity</string>
    <string name="pref_default_keywords">rock</string>
    <string name="pref_default_category">music</string>
    <string name="last_search_id" translatable="false">last_search_id</string>
    <string name="no_event_description">no description</string>
    <string name="null_string" translatable="false">null</string>
    <string name="sync_account_type" translatable="false">fanatic.drkhannah.com</string>
    <string name="content_authority" translatable="false">com.drkhannah.fanatic.provider</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_map">Map</string>
    <string name="menu_title_tickets">Tickets</string>
    <string name="share_event">Share Event</string>
    <string name="fetching_events">Fetching Events</string>
    <string name="response_image_size" translatable="false">large</string>
    <string name="pref_keywords_title">Keywords</string>
</resources>
